Fixed menu on mobile

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -71,7 +71,10 @@
 
   &__list {
     list-style-type: none;
-    padding-inline-start: 1em;
+
+    @include g.breakpoint-down(medium) {
+      padding-inline-start: 1em;
+    }
   }
 
   &__item {
@@ -83,6 +86,8 @@
     }
 
     @include g.breakpoint-down(medium) {
+      display: block;
+
       &:not(:last-of-type) {
         margin-inline-end: 0;
       }
